<resources>
    <string name="app_name" translatable="false">TrabalhoPratico_AM</string>
    <string name="singleplayer">Singleplayer</string>
    <string name="multiplayer">Multiplayer</string>
    <string name="profile">Profile</string>
    <string name="username">Username</string>
    <string name="update">Update</string>
    <string name="msg_empty_username">Please enter a username</string>
    <string name="arquitecturas_moveis" translatable="false">Arquitecturas Móveis</string>
    <string name="server_mode">Server Mode</string>
    <string name="client_mode">Client Mode</string>
    <string name="credits">Credits</string>
    <string name="level">LEVEL</string>
    <string name="seconds">seconds</string>
    <string name="points">points</string>
    <string name="points2">Points</string>
    <string name="expressions_missing">expressions missing</string>
    <string name="new_level">New Level</string>
    <string name="level_dialog">Level</string>
    <string name="pause_game_dialog">Do you want to pause the game?</string>
    <string name="pause_resume_dialog">Do you want to resume the game?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="leave_game_dialog">Do you really want to leave?</string>
    <string name="game_over_dialog">Game Over</string>
    <string name="game_over_points_dialog">The game is over and your points are</string>
    <string name="new_game">New Game</string>
    <string name="exit">Exit</string>
    <string name="time">time</string>
    <string name="time2">Time</string>
    <string name="server_ip">Server IP address:</string>
    <string name="server_wait_client">Waiting for a client…</string>
    <string name="connect">Connect</string>
    <string name="connect_emulator">Connect to emulator</string>
    <string name="cancel">Cancel</string>
    <string name="wait_players_dialog">Please wait until all players finish the level</string>
    <string name="toast_profile">You don\'t have any profile</string>
    <string name="no_data_available">No data available</string>
</resources>