<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageButton
        android:id="@+id/btnTopFive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/ivLogo"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        android:layout_marginTop="20dp"
        android:background="@drawable/roundbtn"
        android:src="@drawable/button_state"
        tools:ignore="NotSibling" />
    <FrameLayout
        android:id="@+id/flLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/btnTopFive"
        app:layout_constraintBottom_toTopOf="@id/llayoutBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="MissingConstraints">
        <ImageView
            android:id="@+id/ivLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logo"
            android:layout_margin="10dp"
            />
    </FrameLayout>

    <LinearLayout
        android:id="@+id/llayoutBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        >

    <Button
        android:id="@+id/btnSingleplayer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/singleplayer"
        app:icon="@drawable/ic_baseline_person_outline_24"
        app:cornerRadius="30dp"
        android:textSize="20sp"
        android:theme="@style/Theme.ButtonColor"
        />
    <Button
        android:id="@+id/btnMultiplayer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/multiplayer"
        app:icon="@drawable/ic_baseline_device_hub_24"
        app:cornerRadius="30dp"
        android:textSize="20sp"
        android:theme="@style/Theme.ButtonColor"
        />
    <Button
        android:id="@+id/btnProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profile"
        app:icon="@drawable/ic_baseline_person_outline_24"
        app:cornerRadius="30dp"
        android:textSize="20sp"
        android:theme="@style/Theme.ButtonColor"
        />
    <Button
        android:id="@+id/btnCredits"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/credits"
        app:icon="@drawable/ic_baseline_exit_to_app_24"
        app:cornerRadius="30dp"
        android:textSize="20sp"
        android:theme="@style/Theme.ButtonColor"
        />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>